[package]
name = "aeron-rs"
version = "0.1.0"
edition = "2021"
authors = ["Davide"]
description = "Safe C++ bindings for Aeron via cxx"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3.5"
cxx = "1.0"
once_cell = "1.19"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
reqwest = { version = "0.12", features = ["blocking", "default-tls"] }
tar = "0.4"
flate2 = "1.0"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[[bin]]
name = "aeronmd"
path = "src/bin/aeronmd.rs"

[[bin]]
name = "counters"
path = "src/bin/counters.rs"

[[bin]]
name = "large_ping"
path = "src/bin/large_ping.rs"

[[bin]]
name = "large_pong"
path = "src/bin/large_pong.rs"
