[package]
name = "aeron-rs"
version = "0.1.0"
edition = "2021"
authors = ["Davide"]
description = "Safe C++ bindings for Aeron via cxx"
license = "Apache-2.0"

[features]
archive = []

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3.5"
cxx = "1.0"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
reqwest = { version = "0.12", features = ["blocking", "default-tls"] }
tar = "0.4"
flate2 = "1.0"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[[bin]]
name = "mediadriver"
path = "src/bin/mediadriver.rs"

[[bin]]
name = "counters"
path = "src/bin/counters.rs"

[[bin]]
name = "large_ping"
path = "src/bin/large_ping.rs"

[[bin]]
name = "large_pong"
path = "src/bin/large_pong.rs"

[[bin]]
name = "image_demo"
path = "src/bin/image_demo.rs"

[[bin]]
name = "record"
path = "src/bin/record.rs"
required-features = ["archive"]

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
required-features = ["archive"]
