[package]
name = "aeron-glide"
version = "0.1.3"
edition = "2024"
rust-version = "1.97"
authors = ["Mehve Labs <554170+davidebenato@users.noreply.github.com>"]
description = "Safe, idiomatic Rust wrapper for the Aeron C++ API via cxx"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mehve-labs/aeron-glide"
homepage = "https://github.com/mehve-labs/aeron-glide"
documentation = "https://docs.rs/aeron-glide"
readme = "README.md"
keywords = ["aeron", "messaging", "ipc", "low-latency", "pub-sub"]
categories = ["network-programming", "concurrency"]
exclude = ["scripts/", "aeron-archive/", ".claude/", ".github/", "TODO.md"]

[package.metadata.docs.rs]
features = ["archive"]

[features]
archive = []

[dependencies]
ctrlc = "3.5"
cxx = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
once_cell = "1.19"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
reqwest = { version = "0.12", features = ["blocking", "default-tls"] }
tar = "0.4"
flate2 = "1.0"

[[bin]]
name = "mediadriver"
path = "src/bin/mediadriver.rs"

[[example]]
name = "ping"
path = "examples/ping.rs"

[[example]]
name = "pong"
path = "examples/pong.rs"

[[example]]
name = "counters"
path = "examples/counters.rs"

[[example]]
name = "large_ping"
path = "examples/large_ping.rs"

[[example]]
name = "large_pong"
path = "examples/large_pong.rs"

[[example]]
name = "image_demo"
path = "examples/image_demo.rs"

[[example]]
name = "throughput"
path = "examples/throughput.rs"

[[example]]
name = "latency"
path = "examples/latency.rs"

[[example]]
name = "record"
path = "examples/record.rs"
required-features = ["archive"]

[[example]]
name = "replay"
path = "examples/replay.rs"
required-features = ["archive"]

[[example]]
name = "replay_merge_demo"
path = "examples/replay_merge_demo.rs"
required-features = ["archive"]
